penambahan controller add new member
